--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Panda Login Page</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -17,29 +15,25 @@
             <label for="password">Enter your password</label>
             <input type="password" id="password" placeholder="password" />
             <button>Login</button>
-
         </form>
         <div class="ear-l"></div>
         <div class="ear-r"></div>
-        <div 
-        class="panda-face">
-        <div class="blush-l"></div>
-        <div class="blush-r"></div>
-        <div 
-        class="eye-l">
-        <div class="eyeball-l"></div>
-    </div>
-    <div
-     class="eye-r">
-        <div class="eyeball-r"></div>
-    </div>
-    <div class="nose"></div>
-    <div class="mouth"></div>
-</div>
-<div class="hand-l"></div>
-    <div class="hand-r"></div>
-    <div class="leg-l"></div>
-    <div class="leg-r"></div>
+        <div class="panda-face">
+            <div class="blush-l"></div>
+            <div class="blush-r"></div>
+            <div class="eye-l">
+                <div class="eyeball-l"></div>
+            </div>
+            <div class="eye-r">
+                <div class="eyeball-r"></div>
+            </div>
+            <div class="nose"></div>
+            <div class="mouth"></div>
+        </div>
+        <div class="hand-l"></div>
+        <div class="hand-r"></div>
+        <div class="leg-l"></div>
+        <div class="leg-r"></div>
     </div>
 </body>
 </html>
